# horosc-hope

./: .gitignore  README.md  pyproject.toml  run.py  run_dev.py
backend/: requirements.txt
backend/agents/roast_agent/: agent.py  prompt_templates.py
backend/agents/scraper_agent/: agent.py  scraper.py
backend/agents/scraper_agent/prompts/: normalization.txt
backend/api/: main.py
backend/api/routes/: horoscope.py
backend/api/utils/: caching.py
backend/core/: agents_sdk_wrapper.py  birth_chart_calculator.py  config.py  daily_data_manager.py  geocoder.py  zodiac_calculator.py
backend/data/daily_horoscopes/: horoscopes_2025-06-21.json
frontend/: index.html  style.css
frontend/src/: main.js
